# plai

./: .gitignore  CLAUDE.md  README.md  flash.bat  flash.ps1  nvs.csv  partitions.csv  sdkconfig  sdkconfig.old
.github/: FUNDING.yml
components/LovyanGFX/src/lgfx/v1/: LGFXBase.cpp
main/: CMakeLists.txt  main.cpp
main/apps/: apps.h
main/apps/app_channels/: app_channels.cpp
main/apps/app_charge/: app_charge.cpp  app_charge.h
main/apps/app_charge/assets/: app_charge.h
main/apps/app_monitor/: app_monitor.cpp  app_monitor.h
main/apps/app_nodes/: app_nodes.cpp  app_nodes.h
main/apps/app_settings/: app_settings.h
main/apps/app_stats/: app_stats.cpp  app_stats.h
main/apps/app_stats/assets/: stat_tasks.h
main/apps/launcher/: launcher.cpp  launcher.h
main/apps/launcher/views/system_bar/: system_bar.cpp
main/apps/utils/screenshot/: screenshot_tools.cpp
main/apps/utils/ui/: dialog.cpp  settings_screen.cpp
main/hal/: hal.h  hal_cardputer.cpp  hal_cardputer.h
main/hal/bat/: battery.cpp  battery.h
main/hal/gps/: gps.cpp
main/hal/keyboard/: keyboard_reader_tca8418.cpp  tca8418_driver.cpp
main/hal/led/: led.cpp  led.h
main/hal/radio/: sx1262.cpp
main/hal/sdcard/: sdcard.cpp
main/hal/speaker/: speaker.cpp
main/mesh/: mesh_data.cpp  mesh_data.h  mesh_service.cpp  mesh_service.h  node_db.cpp  node_db.h  packet_router.cpp  packet_router.h
main/settings/: settings.cpp  settings.h
map/: download_osm_tiles.py
scripts/: README.md  icons_to_png.py  png_to_icon.py
